Update Pygments version and add field highlighting

--- a/src/test/resources/input/index.html
+++ b/src/test/resources/input/index.html
@@ -12,8 +12,13 @@ More here.
 
 class MyProgram {
   int startTime;
+  my.thing.done();
 }
 
+```
+
+```json
+"hello":{123,123}
 ```
 
 And some SQL
